# Algorand-School-MEGA-ACE-x-Folks-Finance

./: .gitignore  README.md  app.py  application.json  deploy.py  pyproject.toml  pytest.ini  test_app.py
algorand-school-mega-ace-task-main/contracts/: nft_as_collateral.py
algorand-school-mega-ace-task-main/helpers/: checks.py  inners.py
artifacts/: application.json  approval.teal  contract.json
